--- a/backend/package.json
+++ b/backend/package.json
@@ -13,40 +13,45 @@
     "lint": "eslint src --ext .ts",
     "test": "vitest"
   },
-  "keywords": ["comments", "collaboration", "repository"],
+  "keywords": [
+    "comments",
+    "collaboration",
+    "repository"
+  ],
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
+    "@anthropic-ai/sdk": "^0.73.0",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "pg": "^8.11.3",
-    "socket.io": "^4.6.2",
+    "express": "^4.18.2",
+    "express-rate-limit": "^7.1.5",
+    "express-validator": "^7.0.1",
+    "helmet": "^7.1.0",
+    "jsonwebtoken": "^9.0.2",
     "passport": "^0.7.0",
     "passport-github2": "^0.1.12",
     "passport-google-oauth20": "^2.0.0",
-    "jsonwebtoken": "^9.0.2",
-    "express-validator": "^7.0.1",
-    "helmet": "^7.1.0",
-    "express-rate-limit": "^7.1.5",
-    "cookie-parser": "^1.4.6",
+    "pg": "^8.11.3",
+    "socket.io": "^4.6.2",
     "winston": "^3.11.0"
   },
   "devDependencies": {
-    "@types/express": "^4.17.21",
+    "@types/cookie-parser": "^1.4.6",
     "@types/cors": "^2.8.17",
-    "@types/pg": "^8.10.9",
+    "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.5",
+    "@types/node": "^20.10.6",
     "@types/passport": "^1.0.16",
     "@types/passport-github2": "^1.2.9",
     "@types/passport-google-oauth20": "^2.0.14",
-    "@types/jsonwebtoken": "^9.0.5",
-    "@types/cookie-parser": "^1.4.6",
-    "@types/node": "^20.10.6",
-    "typescript": "^5.3.3",
-    "tsx": "^4.7.0",
-    "eslint": "^8.56.0",
+    "@types/pg": "^8.10.9",
     "@typescript-eslint/eslint-plugin": "^6.17.0",
     "@typescript-eslint/parser": "^6.17.0",
+    "eslint": "^8.56.0",
+    "tsx": "^4.7.0",
+    "typescript": "^5.3.3",
     "vitest": "^1.1.0"
   },
   "engines": {
